tests/baselines/reference/globalThisCollision.errors.txt
globalThisCollision.js(1,5): error TS2397: Declaration name conflicts with built-in global identifier 'globalThis'.


==== globalThisCollision.js (1 errors) ====
    var globalThis;
        ~~~~~~~~~~
!!! error TS2397: Declaration name conflicts with built-in global identifier 'globalThis'.